:white_check_mark: added test as intructed by muneeb bhai

--- a/views/courses/create.ejs
+++ b/views/courses/create.ejs
@@ -53,11 +53,11 @@
   <form class="form" method="post" action="" enctype="application/x-www-form-urlencoded">
     <div class="input-container">
       <div class="label">Name: </div>
-      <input class="input" name="name" placeholder="enter name" />
+      <input class="input" data-testid="name-input" name="name" placeholder="enter name" />
     </div>
     <div class="input-container">
       <div class="label">Credit Hours: </div>
-      <input class="input" name="creditHours" placeholder="enter credit hours" type="number" min="1" max="4" />
+      <input class="input" name="creditHours" data-testid="creditHours-input" placeholder="enter credit hours" type="number" min="1" max="4" />
     </div>
 
     <button class="button" type="submit">create course</button>
